# discriminated_union

./: CMakeLists.txt  README.md  main.cpp
include/: Result.h  results.h
src/: Result.cpp
tests/: CMakeLists.txt  MainTests.cpp  ResultTests.cpp
